--- a/PlainEdit/Base.lproj/Main.storyboard
+++ b/PlainEdit/Base.lproj/Main.storyboard
@@ -696,7 +696,7 @@
         <!--Text View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="5gI-5U-AMq" customClass="TextViewController" customModule="PlainEdit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController showSeguePresentationStyle="single" id="5gI-5U-AMq" customClass="TextViewController" customModule="PlainEdit" customModuleProvider="target" sceneMemberID="viewController">
                     <scrollView key="view" borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" allowsMagnification="YES" usesPredominantAxisScrolling="NO" id="UFj-Ac-3E5">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -735,14 +735,17 @@
         <!--Split View Controller-->
         <scene sceneID="sJp-aP-SIZ">
             <objects>
-                <splitViewController id="QYY-E8-p9w" sceneMemberID="viewController">
+                <splitViewController showSeguePresentationStyle="single" id="QYY-E8-p9w" sceneMemberID="viewController">
                     <splitViewItems>
                         <splitViewItem id="EW5-eM-wfR"/>
                         <splitViewItem canCollapse="YES" holdingPriority="260" behavior="sidebar" id="xcy-5z-I58"/>
                     </splitViewItems>
-                    <splitView key="splitView" wantsLayer="YES" dividerStyle="thin" vertical="YES" id="t0g-TL-MIj">
+                    <splitView key="splitView" dividerStyle="thin" vertical="YES" id="t0g-TL-MIj">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="wantsLayer" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                     </splitView>
                     <connections>
                         <segue destination="5gI-5U-AMq" kind="relationship" relationship="splitItems" id="feX-Ad-rW5"/>
@@ -756,7 +759,7 @@
         <!--View Controller-->
         <scene sceneID="HV1-1L-nds">
             <objects>
-                <viewController id="3cL-Lw-GBo" sceneMemberID="viewController">
+                <viewController showSeguePresentationStyle="single" id="3cL-Lw-GBo" sceneMemberID="viewController">
                     <view key="view" id="LBA-Um-Qhr">
                         <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
