--- a/PlainEdit/Base.lproj/Main.storyboard
+++ b/PlainEdit/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14490.70"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15505"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -736,10 +736,17 @@
                         </scroller>
                     </scrollView>
                     <connections>
+                        <outlet property="textFinder" destination="nnY-uT-L8n" id="rLY-wF-LFE"/>
                         <outlet property="textView" destination="Qdf-dI-xqd" id="mRQ-fv-NeF"/>
                     </connections>
                 </viewController>
                 <customObject id="2Tp-Fl-jBw" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <textFinder incrementalSearchingEnabled="YES" incrementalSearchingShouldDimContentView="YES" id="nnY-uT-L8n">
+                    <connections>
+                        <outlet property="client" destination="Qdf-dI-xqd" id="Tjl-mG-qW5"/>
+                        <outlet property="findBarContainer" destination="Qdf-dI-xqd" id="kF9-B6-dMb"/>
+                    </connections>
+                </textFinder>
             </objects>
             <point key="canvasLocation" x="-99" y="1202"/>
         </scene>
@@ -780,7 +787,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rbX-52-r5M">
-                                <rect key="frame" x="50" y="133" width="100" height="34"/>
+                                <rect key="frame" x="50" y="134" width="100" height="33"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Sidebar" id="9XP-VR-LAe">
                                     <font key="font" metaFont="systemMedium" size="28"/>
                                     <color key="textColor" name="tertiaryLabelColor" catalog="System" colorSpace="catalog"/>
